# matchmaker

./: pyproject.toml
docs/reference/: ups.js
frontend/: api.js  app.js  debug.js  dom-helpers.js  index.html  state.js
frontend/components/: filebrowser.js  morph.js  projectmodal.js  stereographic.js  stereoview.js  trajectory.js  ups.js  viewer3d.js
frontend/steps/: align.js  load.js  match.js  preprocess.js  trajectory.js
matchmaker/: __main__.py  cli.py  cli_match.py  jobs.py  matchmesh_runner.py  morph_runner.mjs  pipeline.py  server.py
matchmaker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: match_pair.py
tests/: conftest.py  e2e.js  morph-unit.js  package-lock.json  package.json  rotation-unit.js  test_jobs.py  test_match.py  test_morph.py  test_pipeline.py  test_trajectory.py
tests/fixtures/: trajectory_golden_frame0.npy
