[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "matchmaker"
version = "0.1.0"
description = "Unified tool for matching brain surface meshes"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
matchmaker = "matchmaker.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["matchmaker*"]

[tool.setuptools.package-data]
matchmaker = ["bin/**/*", "frontend/**/*"]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow-running (deselect with -m 'not slow')"]
